# DevOps

./: .gitignore  .gitlab-ci.yml  README.md  gitlab-ci.yml
BuildUs/: CMakeLists.txt  main.cpp
BuildUs/build_fold/tests/: config.buildus  config2.buildus  main.cpp  util.cpp  util.h
BuildUs/tests/: CMakeLists.txt  unittests.cpp
doc/: documentation.md
gitus/: CMakeLists.txt  gitus.cpp
gitus/git/: CMakeLists.txt  add.cpp  add.h  commit.cpp  commit.h  dummy.cpp  init.cpp  init.h  utils.cpp  utils.h
gitus/tests/: unittests.cpp
orchestrus/: docker-compose.yml  example.json  makefile
orchestrus/bdd-controller/: Dockerfile  Program.cs  Readme.md  UnitTest1.cs  bdd-controller.csproj  sockets.cs
orchestrus/orchestrus-core/: Dockerfile  Program.cs  Readme.md  UnitTest1.cs  orchestrus-core.csproj
orchestrus/postgres/: Dockerfile  Readme.md  initDB.sh
orchestrus/worker/: Dockerfile  Program.cs  Readme.md  UnitTest1.cs  sockets.cs  worker.csproj
